# Cpp-Capstone-FaceDetectorSoftware

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  camframegrabber.cpp  camframegrabber.hpp  facedetector.cpp  facedetector.hpp  framegrabber.cpp  framegrabber.hpp  imageframegrabber.cpp  imageframegrabber.hpp  logprovider.cpp  logprovider.hpp  main.cpp
